# grasp-plugin-choreonoid-1.7

./: .gitignore  INSTALL-REQUISITES.sh  README.md
BinPicking/: BinPickingBar.cpp  BinPickingBar.h  BinPickingControl.cpp  BinPickingControl.h  BinPickingPlugin.cpp  CMakeLists.txt  motion  test.txt
BinPicking/project/: README.md  _demo.cnoid  binpicking.cnoid  binpicking_python.cnoid  cable.cnoid  calibration_python.cnoid  demo.cnoid  demo_hiro_ahiru_python.cnoid  demo_hiro_python.cnoid  demo_pa10_ahiru_python.cnoid  proj_binpicking.cnoid  proj_demo.cnoid  pyproj_binpicking.cnoid  pyproj_cable.cnoid  pyproj_calibration.cnoid  pyproj_hiro_grasp_plan_box.cnoid  pyproj_move.cnoid  pyproj_moveold.cnoid  pyproj_noobj.cnoid  pyproj_openlab_demo.cnoid  pyproj_pa10.cnoid  pyproj_proj_pa10.cnoid  pyproj_regrasp.cnoid  pyproj_rozdemo.cnoid  pyproj_testbar.cnoid  pyproj_true.cnoid  python_binpicking.cnoid  python_calibration.cnoid  python_exec_motion.cnoid  python_hiro_grasp_plan_box.cnoid  python_pa10_grasp_plan_ahiru.cnoid  script_hiro_read_grasp_box.py  script_load_move.py  script_move.py  simple.cnoid  study.cnoid  worldexpo.cnoid
BinPicking/pybind11/: CMakeLists.txt  Makefile  PyBinPickingModule.cpp  PyMotionPlanner.cpp  cmake_install.cmake
BinPicking/script/: binpicking_example.py  grasp_example.py  grasp_hiro.py  grasp_hiro_ahiru.py  grasp_pa10_ahiru.py  hiro_grasp_box.py  pa10_grasp_plan_ahiru.py  script_binpicking.py  script_calibration.py  script_exec_motion.py  script_fling.py  script_goinitial.py  script_hiro_grasp_plan_box.py  script_move.py  script_move_ft.py  script_move_thk.py  script_pa10_grasp_plan_ahiru.py  script_pick.py  script_pickorsep.py  script_setinitial.py  script_soft_hand.py  script_wave_demo.py
BinPicking/test_project/: pyproj_hiro.cnoid  pyproj_pa10.cnoid  script_pa10_grasp_plan_ahiru.py  script_pa10_read_grasp_ahiru.py
Grasp/: CMakeLists.txt  GraspController.cpp  GraspEventEater.cpp  PlanBase.cpp  install-requisities-ubuntu.sh
Grasp/boostpython/: CMakeLists.txt  Makefile  PyGraspPluginModule.cpp  PyHello.cpp  cmake_install.cmake
Grasp/boostpython/script/: .grasp_example1.py.swp  .grasp_test.py.swp  grasp_example1.py  grasp_test.py  header_test.py
Grasp/pybind11/: CMakeLists.txt  Makefile  PyGrasp.cpp  PyGraspPluginModule.cpp  PyHello.cpp  PyHelloOverload.cpp  PyPlanBase.cpp  cmake_install.cmake
Grasp/pybind11/script/: grasp_example1.py  grasp_example2.py  grasp_test.py
MotionFile/: CMakeLists.txt  MotionFileBar.cpp  MotionFileBar.h  MotionFileControl.cpp  MotionFileControl.h
MotionFile/pybind11/: Makefile  PyMotionFileControl.cpp  PyMotionFileModule.cpp  cmake_install.cmake
MotionFileBak/: MotionFileControl.cpp  MotionFileControl.h
MotionFileBak/pybind11/: CMakeLists.txt
PCL/: ObjectPoseEstimator.cpp  ObjectPoseEstimatorInterface.cpp  PCLBar.cpp  PointCloudHandler.cpp  PointCloudMerger.cpp  Segmenter.cpp
PCL/calibtools/: calibmat.txt  calibmat.txt.xy  calibmat_using.txt
PCL/models/: coldetmodel.wrl
PRM/: TrajectoryPlanner.cpp  TrajectoryPlanner.h  mpkInterface.cpp  sblPlanner.cpp
PRM/pybind11/: Makefile  PyPRMModule.cpp  PyTrajectoryPlanner.cpp  cmake_install.cmake
PRMBak/: CMakeLists.txt  TrajectoryPlanner.cpp
PRMBak/pybind11/: CMakeLists.txt  PyTrajectoryPlanner.cpp
RobotModels/: Makefile  cmake_install.cmake
RobotModels/HIRO/: BASE.wrl  BODY.wrl  FORCESENSOR.wrl  HEADCOVER.wrl  HIRO.yaml  HIRO2.yaml  HIRO2kinect.yaml  HIRO4finger.yaml  HIRO_AirHand.yaml  HIRO_assembly.yaml  HIRO_dualarm.yaml  HIRO_expipe.yaml  HIRO_expipe_AirHand.yaml  HIRO_for_toolchange_assemble.yaml  HIRO_innorobo.yaml  HIRO_innorobo25.yaml  HIRO_wagon.yaml  HIRO_with_provision.yaml  HIRO_with_provision1.yaml  HIRO_with_provision_attachmentpicker.yaml  HIRO_with_provision_raessa_2.yaml  HIRO_with_provision_raessa_2.yaml~  HIRO_with_softhand.yaml  HIROforTsha.yaml  HIROmovable.yaml  HIROmovable_wagon.yaml  HIROnoHand.yaml  HIROnoHandforAssembly.yaml  HandSample.yaml  KINECT.wrl  LEP.wrl  LHANDCAM_01.wrl  LRWR.wrl  LSP.wrl  LSY.wrl  LWP.wrl  LWR-J1.wrl  LWR-J2.wrl  LWR-J3.wrl  LWY.wrl  (+54 more)
RobotModels/HIRO.old/HIRO/: BatteryBase.wrl  CY.wrl  HandA.wrl  HandAHrp.wrl  HandA_Base.wrl  HandA_Fing0.wrl  HandA_Fing1.wrl  HandA_Fing2.wrl  HandB.wrl  HandB_Base.wrl  HandB_Fing0.wrl  HandB_Fing1.wrl  HandB_Fing2.wrl  LEP.wrl  LEP2.wrl  LSP.wrl  LSY.wrl  LWP.wrl  LWR.wrl  (+19 more)
RobotModels/HIRO/Plugin/: CMakeLists.txt  Config.h  GrasplotPluginHIRO.cpp  GrasplotPluginHIRO.h  Makefile  cmake_install.cmake  libGrasplotHIRO_0_8.so.0  libGrasplotHIRO_0_8.so.0.0.0
RobotModels/HIRO/Plugin/OpenRAVE/: CMakeLists.txt  Makefile  cmake_install.cmake  ikfast46.HIRONX.Transform6D_left.cpp  ikfast46.HIRONX.Transform6D_right.cpp  ikfast61.HIRONX.Transform6D_left.cpp  ikfast61.HIRONX.Transform6D_right.cpp
RobotModels/HRP2STEP1/: LEP2.wrl  LSP.wrl  LSY.wrl  LWP.wrl  LWY.wrl  REP2.wrl  RSP.wrl  RSY.wrl  RWP.wrl  RWY.wrl  main.wrl  main_realNmodel.yaml
RobotModels/HRP2STEP1/Controller/: CMakeLists.txt  GearController.cpp  ImpedanceController.cpp  ImpedanceController.h  SimpleGraspController.cpp  TiltGearboxController.cpp  WormController.cpp
RobotModels/HRP2STEP1/Plugin/OpenRAVE/: CMakeLists.txt  ikfast.h  ikfast61.HRP2STEP1.Transform6D_left.cpp  ikfast61.HRP2STEP1.Transform6D_right.cpp
RobotModels/NIE/: zz-innerhrp.wrl
RobotModels/PA10_VVV/: PA10.yaml  PA10test.excade  hand.wrl  hand_l.wrl  hand_r.wrl  pa10.main.wrl
RobotModels/PA10_VVV/Plugin/: CMakeLists.txt  GrasplotPluginPA10.cpp  GrasplotPluginPA10.h
RobotModels/RH1/: PoseSeqItem  RH1.wrl  RH1.yaml
RobotModels/SmartPal/: SmartPal5.wrl  SmartPal5_.yaml  SmartPal5_SamHand.wrl  SmartPal5_SamHand.yaml
RobotModels/iARM/: base.wrl  iARM.yaml  iARMTest.excade  iarm-main-fixed.wrl  iarm.main.wrl  iarm2.wrl  j1.wrl  j2.wrl  j3.wrl  j4.wrl  j5.wrl  j6.wrl  l_finger.wrl  l_tip.wrl  manus.wrl  r_finger.wrl  r_tip.wrl
Samples/Object/: boxSquare.wrl  boxSquare.yaml  boxSquareHrp.wrl  container.wrl  containerHrp.wrl
docker/: Dockerfile  INSTALL.sh  README.md
(+289 files in other folders)
