add_cnoid_simple_controller(HRP2STEP1_SimpleGraspController SimpleGraspController.cpp)
add_cnoid_simple_controller(HRP2STEP1_ImpedanceController ImpedanceController.cpp)
add_cnoid_simple_controller(GearController GearController.cpp)
add_cnoid_simple_controller(TiltGearController TiltGearboxController.cpp)
add_cnoid_simple_controller(WormController WormController.cpp)
target_link_libraries(HRP2STEP1_SimpleGraspController CnoidPoseSeqPlugin)
target_link_libraries(HRP2STEP1_ImpedanceController CnoidPoseSeqPlugin)
target_link_libraries(HRP2STEP1_ImpedanceController CnoidGraspPlugin)
